botão share criado e funcionando

--- a/custom.css
+++ b/custom.css
@@ -27,3 +27,47 @@ main {
 .share {
     cursor: pointer;
 }
+
+.share-text {
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: hsl(214, 17%, 51%);
+}
+
+.column.share.right {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.background {
+    background-color: hsl(217, 19%, 35%);
+    border-radius: 0 0 0.5rem 0.5rem;
+    padding: 1rem;
+}
+
+.hidden {
+    display: none !important;
+}
+
+@media (min-width: 768px) {
+    .pos-share {
+        padding: 0;
+        position: absolute;
+        top: 170px;
+        right: -50px;
+        border-radius: 15px;
+    }
+
+    .pos-share::after {
+        content: '';
+        position: absolute;
+        top: 50px;
+        left: 50%;
+        transform: rotate(45deg) translateX(-50%);
+        width: 25px;
+        height: 25px;
+        background-color: hsl(217, 19%, 35%);
+    }
+}
